--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A wrapper for the RecastDetour navigation library for node and the browser",
   "main": "./lib/recast",
   "scripts": {
-    "test": "cd tests && nodeunit recast.tests.js"
+    "test": "cd tests && nodeunit recast.tests.js && nodeunit recast.withworker.tests.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,8 @@
   "homepage": "https://github.com/vincent/recast.js",
   "devDependencies": {
     "nodeunit": "^0.9.0"
+  },
+  "dependencies": {
+    "webworker-threads": "^0.4.13"
   }
 }
