--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A wrapper for the RecastDetour navigation library for node and the browser",
   "main": "./lib/recast",
   "scripts": {
+    "build": "make build",
     "test": "cd tests && nodeunit recast.tests.js && nodeunit recast.withworker.tests.js"
   },
   "repository": {
