--- a/package.json
+++ b/package.json
@@ -27,7 +27,5 @@
   "devDependencies": {
     "nodeunit": "^0.9.0"
   },
-  "dependencies": {
-    "webworker-threads": "^0.4.13"
-  }
+  "dependencies": {}
 }
