--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A wrapper for the RecastDetour navigation library for node and the browser",
   "main": "./lib/recast",
   "scripts": {
-    "build": "make ensure build",
+    "build": "make build",
     "test": "cd tests && ../node_modules/.bin/nodeunit --reporter=verbose recast.tests.js recast.withworker.tests.js && echo all test passed"
   },
   "repository": {
