--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/recast",
   "scripts": {
     "build": "make ensure build",
-    "test": "cd tests && ../node_modules/.bin/nodeunit --reporter=verbose recast.tests.js recast.withworker.tests.js && echo all test passed"
+    "test": "cd tests && ../node_modules/.bin/nodeunit --reporter=verbose `find . -name 'test.*.js' |xargs` && echo all test passed"
   },
   "repository": {
     "type": "git",
